--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,6 +19,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.18",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
